--- a/views/cursos.ejs
+++ b/views/cursos.ejs
@@ -5,21 +5,19 @@
             <table>
                 <tbody>
                     <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Vídeo Introductorio</p></th>
-                        <td></td>
+                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></td>
+                        <td colspan="2" class="titulo">Vídeo Introductorio</td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido">
-                            <p>Contenido:</p>
-                            <p class="pContenido">Introducción del curso</p>
+                        <td colspan="2">
+                            <div class="contenido">Contenido:</div>
+                            <div class="pContenido"><p class="iconoDiv">·</p>Introducción del curso</div>
+                            <div class="pContenido"><p class="iconoDiv">·</p>Introducción del curso</div>
+                            <div class="pContenido"><p class="iconoDiv">·</p>Introducción del curso</div>
                         </td>
-                        <td></td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td class="cantTiempo"><label id="cant">2:05</label></td>
                         <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
                     </tr>
                 </tbody>
@@ -31,24 +29,20 @@
             <table>
                 <tbody>
                     <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Entorno de trabajo (Windows)</p></th>
-                        <td></td>
+                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></td>
+                        <td colspan="2" class="titulo">Entorno de trabajo (Windows)</th>
                     </tr>
                     <tr>
-                        <th></th>
                         <td colspan="2" class="contenido">
-                            <p>Contenido:</p>
-                            <p class="pContenido">Instalación de PHP</p>
-                            <p class="pContenido">Crear un servidor para PHP</p>
-                            <p>Recurso:</p>
-                            <p class="pContenido">Guía de instalación</p>
+                            <div class="contenido">Contenido:</div>
+                            <div class="pContenido">· Instalación de PHP</div>
+                            <div class="pContenido">· Crear un servidor para PHP</div>
+                            <div class="recurso">Recurso:</div>
+                            <div class="pContenido">· Guía de instalación</div>
                         </td>
-                        <td></td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td class="cantTiempo"><label id="cant">2:05</label></td>
                         <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
                     </tr>
                 </tbody>
@@ -60,24 +54,20 @@
             <table>
                 <tbody>
                     <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Entorno de trabajo (Linux)</p></th>
-                        <td></td>
+                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></td>
+                        <td colspan="2" class="titulo">Entorno de trabajo (Linux)</th>
                     </tr>
                     <tr>
-                        <th></th>
                         <td colspan="2" class="contenido">
-                            <p>Contenido:</p>
-                            <p class="pContenido">Instalación de PHP</p>
-                            <p class="pContenido">Crear un servidor para PHP</p>
-                            <p>Recurso:</p>
-                            <p class="pContenido">Guía de instalación</p>
+                            <div class="contenido">Contenido:</div>
+                            <div class="pContenido">· Instalación de PHP</div>
+                            <div class="pContenido">· Crear un servidor para PHP</div>
+                            <div class="recurso">Recurso:</div>
+                            <div class="pContenido">· Guía de instalación</div>
                         </td>
-                        <td></td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td class="cantTiempo"><label id="cant">2:05</label></td>
                         <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
                     </tr>
                 </tbody>
@@ -89,212 +79,26 @@
             <table>
                 <tbody>
                     <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Conceptos básicos</p></th>
-                        <td></td>
+                        <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></td>
+                        <td colspan="2" class="titulo">Conceptos básicos</th>
                     </tr>
                     <tr>
-                        <th></th>
                         <td colspan="2" class="contenido">
-                            <p>Contenido:</p>
-                            <p class="pContenido">Tipos de datos</p>
-                            <p class="pContenido">Sintaxis</p>
-                            <p class="pContenido">Estructuras condicionales</p>
-                            <p class="pContenido">Ciclos</p>
-                            <p class="pContenido">Manejo de Errores</p>
-                            <p class="pContenido">Arreglos y cadenas en PHP</p>
+                            <div class="contenido">Contenido:</div>
+                            <div class="pContenido">· Tipos de datos</div>
+                            <div class="pContenido">· Sintáxis</div>
+                            <div class="pContenido">· Estructuras condicionales</div>
+                            <div class="pContenido">· Ciclos</div>
                         </td>
-                        <td></td>
                     </tr>
                     <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
+                        <td class="cantTiempo"><label id="cant">2:05</label></td>
                         <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
                     </tr>
                 </tbody>
             </table>
         </section>
     </a>
-    <a href="#">
-        <section class="cSection">
-            <table>
-                <tbody>
-                    <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Programación orientada a objetos</p></th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido">
-                            <p>Contenido:</p>
-                            <p class="pContenido">Creación de objetos</p>
-                            <p class="pContenido">Herencia</p>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
-                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </a>
-    <a href="#">
-        <section class="cSection">
-            <table>
-                <tbody>
-                    <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Base de datos con PHP</p></th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido">
-                            <p>Contenido:</p>
-                            <p class="pContenido">Manejo de base de datos</p>
-                            <p class="pContenido">Acceso a base de datos</p>
-                            <p class="pContenido">Conexión de base de datos</p>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
-                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </a>
-    <a href="#">
-        <section class="cSection">
-            <table>
-                <tbody>
-                    <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Creación de formularios en PHP</p></th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido">
-                            <p>Contenido:</p>
-                            <p class="pContenido">Expresiones regulares</p>
-                            <p class="pContenido">Get y Post</p>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
-                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </a>
-    <a href="#">
-        <section class="cSection">
-            <table>
-                <tbody>
-                    <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Consumir API en PHP</p></th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido">
-                            <p>Contenido:</p>
-                            <p class="pContenido">Get</p>
-                            <p class="pContenido">Post</p>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
-                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </a>
-    <a href="#">
-        <section class="cSection">
-            <table>
-                <tbody>
-                    <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>Sesiones y manejo de cookies</p></th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido">
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
-                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </a>
-    <a href="#">
-        <section class="cSection">
-            <table>
-                <tbody>
-                    <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>CRUD en PHP</p></th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido">
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
-                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </a>
-    <a href="#">
-        <section class="cSection">
-            <table>
-                <tbody>
-                    <tr>
-                        <th rowspan="3" class="icono"><i class="fas fa-play-circle"></i></th>
-                        <th colspan="2" class="titulo"><p>WebSockets en PHP</p></th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <td colspan="2" class="contenido">
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th></th>
-                        <th class="cantTiempo"><label id="cant">2:05</label></th>
-                        <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-    </a>    
+    
 </div>
 <%- include("templates/footer") %>
