--- a/public/css/cursos.css
+++ b/public/css/cursos.css
@@ -19,24 +19,37 @@
     width: 100%;
     height: 100%;
 }
-.contenedor a .cSection table t body tr{
+.contenedor a .cSection table tbody tr{
     margin-top: 100px;
 }
-.contenedor a .cSection table tbody tr th{
-    width: auto;
+.contenedor a .cSection table tbody tr td{
+    padding-left: 10px;
 }
-.contenedor a .cSection table tbody tr .contenido{
-    width: 100%;
-    text-align:left;
+.contenedor a .cSection table tbody tr td .contenido{
+    display: block;
+    padding-left: 15px;
 }
-.contenedor a .cSection table tbody tr .contenido .pContenido{
-    padding-left: 5px;
+.contenedor a .cSection table tbody tr td .recurso{
+    display: block;
+    padding-left: 15px;
+}
+.contenedor a .cSection table tbody tr td .pContenido{
+    padding-left: 30px;
+    display: flex;
+}
+.contenedor a .cSection table tbody tr td .pContenido .iconoDiv{
+    font-size:150%;
+    margin-top: -5px;
+    color:rgb(0, 204, 255);
+    padding-right: 5px;
+    font-weight: bold;
 }
 .contenedor a .cSection table tbody tr .cantTiempo{
     width: 100%;
     text-align:right;
     padding-right: 5px;
     color:black;
+    font-weight: bold;
 }
 .contenedor a .cSection table tbody tr .icono{
     font-size: 450%;
@@ -47,6 +60,7 @@
 .contenedor a .cSection table tbody tr .titulo{
     color:rgb(0, 46, 92);
     font-size: 100%;
+    font-weight: bold;
 }
 .contenedor a .cSection table tbody tr .iconoReloj{
     height: 30px;
