--- a/public/css/foro.css
+++ b/public/css/foro.css
@@ -11,3 +11,36 @@
     color: red;
     padding-bottom: 10px;
 }
+
+.formforo{
+    width: 450px;
+    margin: auto;
+    background-color: aquamarine;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+
+.titfo{
+    color: blue;
+    text-align: center;
+    margin: 2px;
+    font-size: 25px;
+}
+
+.formatinput{
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 7px;
+    box-sizing: border-box;
+    font-size: 15px;
+}
+
+/*Responsive*/
+
+@media(max-width:900px){
+    .formforo{
+        width: 100%;
+    }
+}
