ajustes a rutas de archivos

--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -14,12 +14,12 @@
   <meta name="author" content="William Enrique Vásquez Mancia" />
   <meta name="keywords" content="phpfordevs, php, devs" />
   <meta name="description" content="phpfordevs" />
-  <link rel="stylesheet" type="text/css" href="css/main.css" />
-  <link rel="stylesheet" type="text/css" href="css/cuestionario.css" />
-  <link rel="stylesheet" type="text/css" href="css/cuestionarios.css" />
-  <link rel="stylesheet" type="text/css" href="css/cursos.css" />
-  <link rel="stylesheet" type="text/css" href="css/contac.css" />
-  <link rel="stylesheet" type="text/css" href="css/foro.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/main.css" />
+  <link rel="stylesheet" type="text/css" href="/css/cuestionario.css" />
+  <link rel="stylesheet" type="text/css" href="/css/cuestionarios.css" />
+  <link rel="stylesheet" type="text/css" href="/css/cursos.css" />
+  <link rel="stylesheet" type="text/css" href="/css/contac.css" />
+  <link rel="stylesheet" type="text/css" href="/css/foro.css"/>
   <title>Home</title>
   <script src="https://kit.fontawesome.com/f9e5d5f13a.js" crossorigin="anonymous"></script>
 </head>
