--- a/public/css/cuestionarios.css
+++ b/public/css/cuestionarios.css
@@ -38,7 +38,7 @@
     color:darkgoldenrod;
 }
 .contenedorG a .cSectionC table tbody tr .tituloC{
-    color:#303052;
+    color:rgb(0, 46, 92);
     font-weight: bold;
 }
 .contenedorG a .cSectionC table tbody tr .tituloC .parrafo{
