--- a/public/css/foro.css
+++ b/public/css/foro.css
@@ -1,10 +1,12 @@
-.Foros{
-    background-color: aqua;
+.Foros p{
+    background-color: aliceblue;
+    color: black;
+    padding-top: 5px;
+    font-size: 16px;
 }
 
-.Foros p{
-    color: blue;
-    padding-top: 5px;
+.Foros{
+    margin: 10px;
 }
 
 .Foros a{
@@ -12,14 +14,14 @@
     padding-bottom: 10px;
 }
 
-.formforo{
+.mainforum .forum{
     width: 450px;
-    margin: auto;
     background-color: aquamarine;
     padding: 10px 20px;
     box-sizing: border-box;
     margin-top: 20px;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .titfo{
@@ -37,6 +39,14 @@
     font-size: 15px;
 }
 
+.mainforum{
+    background-color: brown;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
 /*Responsive*/
 
 @media(max-width:900px){
