--- a/views/termycondi.ejs
+++ b/views/termycondi.ejs
@@ -1,44 +1,84 @@
 <%- include("templates/head") %>
 
-<!--Contenido-->
-<h1>Terminos y condiciones</h1>
-<p>El presente contrato describe los términos y condiciones aplicables al uso del contenido, productos y/o servicios del sitio web PHPFORDEVS del cual es titular Grupo 05. Para hacer uso del contenido, productos y/o servicios del sitio web el usuario deberá sujetarse a los presentes términos y condiciones. </p>
+    <!--Contenido-->
+    <h1 class="titulo2">Terminos y condiciones</h1>
 
-<h2>I. OBJETO</h2>
-<p>El titular se reserva el derecho de realizar cualquier tipo de modificación en el sitio web en cualquier momento y sin previo aviso, el usuario acepta dichas modificaciones. 
-    El acceso al sitio web por parte del usuario es libre y gratuito, la utilización del contenido, productos y/o servicios implica un costo de suscripción para el usuario. 
-    El sitio web solo admite el acceso a personas mayores de edad y no se hace responsable por el incumplimiento de esto. 
-    Si el usuario reside en otro país y decide acceder al sitio web lo hará bajo su responsabilidad. 
-    La administración del sitio web puede ejercerse por terceros, es decir, personas distintas al titular, sin afectar esto los presentes términos y condiciones. 
-    </p>
-<h2>II.USUARIO</h2>
-<p>La actividad del usuario en el sitio web como publicaciones o comentarios estarán sujetos a los presentes términos y condiciones. El usuario se compromete a utilizar el contenido, productos y/o servicios de forma lícita, sin faltar a la moral o al orden público, absteniéndose de realizar cualquier acto que afecte los derechos de terceros o el funcionamiento del sitio web. 
-    El usuario se compromete a proporcionar información verídica en los formularios del sitio web. 
-    El acceso al sitio web no supone una relación entre el usuario y el titular del sitio web. 
-    El usuario manifiesta ser mayor de edad y contar con la capacidad jurídica de acatar los presentes términos y condiciones. 
-    </p>
-<h2>III.ACCESO Y NAVEGACIÒN EN EL SITIO WEB</h2>
-<p>El titular no garantiza la continuidad y disponibilidad del contenido, productos y/o servicios en el sitito web, realizará acciones que fomenten el buen funcionamiento de dicho sitio web sin responsabilidad alguna. 
-    El titular no se responsabiliza de que el software esté libre de errores que puedan causar un daño al software y/o hardware del equipo del cual el usuario accede al sitio web. De igual forma, no se responsabiliza por los daños causados por el acceso y/o utilización del sitio web. 
-    </p>
+    <div class="contenedorTC">
 
-<h2>IV.POLÎTICA DE PRIVACIDAD Y PROTECCIÒN DE DATOS</h2>
-<p> El titular se compromete a tomar las medidas necesarias que garanticen la seguridad del usuario, evitando que se haga uso indebido de los datos personales que el usuario proporcione en el sitio web. 
-    El titular corroborará que los datos personales contenidos en las bases de datos sean correctos, verídicos y actuales, así como que se utilicen únicamente con el fin con el que fueron recabados. 
-    PHPFORDEVS se reserva el derecho de realizar cualquier tipo de modificación en el Aviso de Privacidad en cualquier momento y sin previo aviso, de acuerdo con sus necesidades o cambios en la legislación aplicable, el usuario acepta dichas modificaciones. 
-    El sitio web implica la utilización de cookies que son pequeñas cantidades de información que se almacenan en el navegador utilizado por el usuario como datos de ingreso, preferencias del usuario, fecha y hora en que se accede al sitio web, sitios visitados y dirección IP, esta información es anónima y solo se utilizará para mejorar el sitio web. Los cookies facilitan la navegación y la hacen más amigable, sin embargo, el usuario puede desactivarlos en cualquier momento desde su navegador en el entendido de que esto puede afectar algunas funciones del sitio web. 
-    </p>
+        <p class="parrafoTC">El presente contrato describe los términos y condiciones aplicables al uso del contenido,
+            productos y/o servicios del sitio web PHPFORDEVS del cual es titular Grupo 05. Para hacer uso del contenido, productos y/o servicios del sitio web el usuario deberá
+            sujetarse a los presentes términos y condiciones. </p>
+        </div>
+        <h2 class="titulo">I. OBJETO</h2>
+        <div class="contenedorTC">
+        <p class="parrafoTC">El titular se reserva el derecho de realizar cualquier tipo de modificación en el sitio web
+            en cualquier momento y sin previo aviso, el usuario acepta dichas modificaciones. El acceso al sitio web por parte del usuario es libre y gratuito, la utilización del
+            contenido, productos y/o servicios implica un costo de suscripción para el usuario. El sitio web solo admite el acceso a personas mayores de edad y no se hace responsable por
+            el incumplimiento de esto. Si el usuario reside en otro país y decide acceder al sitio web lo hará bajo su responsabilidad.
+        La administración del sitio web puede ejercerse por terceros, es decir, personas distintas
+            al titular, sin afectar esto los presentes términos y condiciones. </p>
+        </div>
 
-<h2>V.POLÌTICA DE ENLACES</h2>
-<p>En el sitio web puede contener enlaces a otros sitios de internet pertenecientes a terceros de los cuales no se hace responsable. </p>
+        <h2 class="titulo">II.USUARIO</h2>
+        <div class="contenedorTC">
+        <p class="parrafoTC">La actividad del usuario en el sitio web como publicaciones o comentarios estarán sujetos a
+            los presentes términos y condiciones. El usuario se compromete a proporcionar información verídica en los formularios del sitio
+            web.</p>
+            <p class="parrafoTC"> El acceso al sitio web no supone una relación entre el usuario y el titular del sitio web. El usuario manifiesta ser mayor de edad y contar con la capacidad jurídica de acatar los
+            presentes términos y condiciones. </p>
+        </div>
 
-<h2>VI.POLÌTICA DE PROPIEDAD INTELECTUAL E INDUSTRIAL</h2>
-<p>El titular manifiesta tener los derechos de propiedad intelectual e industrial del sitio web incluyendo imágenes, archivos de audio o video, logotipos, marcas, colores, estructuras, tipografías, diseños y demás elementos que lo distinguen. 
-    El usuario se compromete a respetar los derechos de propiedad industrial e intelectual del titular pudiendo visualizar los elementos del sitio web, almacenarlos, copiarlos e imprimirlos exclusivamente para uso personal. 
-    </p>
+        <h2 class="titulo">III.ACCESO Y NAVEGACIÒN EN EL SITIO WEB</h2>
+        <div class="contenedorTC">
+        <p class="parrafoTC">El titular no garantiza la continuidad y disponibilidad del contenido, productos y/o
+            servicios en el sitito web, realizará acciones que fomenten el buen funcionamiento de dicho sitio web sin
+            responsabilidad alguna. </p>
+        <p class="parrafoTC">El titular no se responsabiliza de que el software esté libre de errores que puedan causar
+            un daño al software y/o hardware del equipo del cual el usuario accede al sitio web. De igual forma, no se
+            responsabiliza por los daños causados por el acceso y/o utilización del sitio web. </p>
+        </div>
 
-<h2>VII.LEGISLACIÒN Y JURISDICCIÒN APLICABLE</h2>
-<p>La relación entre el usuario y el titular se regirá por las legislaciones aplicables en El Salvador. 
-    PHPFORDEVS no se responsabiliza por la indebida utilización del contenido, productos y/o servicios del sitio web y del incumplimiento de los presentes términos y condiciones. 
-    </p>
-<%- include("templates/footer") %>
+        <h2 class="titulo">IV.POLÎTICA DE PRIVACIDAD Y PROTECCIÒN DE DATOS</h2>
+        <div class="contenedorTC">
+        <p class="parrafoTC">El titular se compromete a tomar las medidas necesarias que garanticen la seguridad del
+            usuario, evitando que se haga uso indebido de los datos personales que el usuario proporcione en el sitio
+            web. </p>
+        <p class="parrafoTC">El titular corroborará que los datos personales contenidos en las bases de datos sean
+            correctos, verídicos y actuales, así como que se utilicen únicamente con el fin con el que fueron recabados.
+        </p>
+        <p class="parrafoTC">PHPFORDEVS se reserva el derecho de realizar cualquier tipo de modificación en el Aviso de
+            Privacidad en cualquier momento y sin previo aviso, de acuerdo con sus necesidades o cambios en la
+            legislación aplicable, el usuario acepta dichas modificaciones. </p>
+        <p class="parrafoTC">El sitio web implica la utilización de cookies que son pequeñas cantidades de información
+            que se almacenan en el navegador utilizado por el usuario como datos de ingreso, preferencias del usuario,
+            fecha y hora en que se accede al sitio web, sitios visitados y dirección IP, esta información es anónima y
+            solo se utilizará para mejorar el sitio web.</p>
+        <p class="parrafoTC">Los cookies facilitan la navegación y la hacen más amigable, sin embargo, el usuario puede
+            desactivarlos en cualquier momento desde su navegador en el entendido de que esto puede afectar algunas
+            funciones del sitio web. </p>
+        </div>
+
+        <h2 class="titulo">V.POLÌTICA DE ENLACES</h2>
+        <div class="contenedorTC">
+        <p class="parrafoTC">En el sitio web puede contener enlaces a otros sitios de internet pertenecientes a terceros
+            de los cuales no se hace responsable. </p>
+        </div>
+
+        <h2 class="titulo"> VI.POLÌTICA DE PROPIEDAD INTELECTUAL E INDUSTRIAL</h2>
+        <div class="contenedorTC">
+        <p class="parrafoTC">El titular manifiesta tener los derechos de propiedad intelectual e industrial del sitio
+            web incluyendo imágenes, archivos de audio o video, logotipos, marcas, colores, estructuras, tipografías,
+            diseños y demás elementos que lo distinguen. </p>
+        <p class="parrafoTC">El usuario se compromete a respetar los derechos de propiedad industrial e intelectual del
+            titular pudiendo visualizar los elementos del sitio web, almacenarlos, copiarlos e imprimirlos
+            exclusivamente para uso personal. </p>
+        </div>
+
+        <h2 class="titulo">VII.LEGISLACIÒN Y JURISDICCIÒN APLICABLE</h2>
+        <div class="contenedorTC">
+        <p class="parrafoTC">La relación entre el usuario y el titular se regirá por las legislaciones aplicables en El
+            Salvador. </p>
+        <p class="parrafoTC">PHPFORDEVS no se responsabiliza por la indebida utilización del contenido, productos y/o
+            servicios del sitio web y del incumplimiento de los presentes términos y condiciones. </p>
+    </div>
+    <%- include("templates/footer") %>
