etiqueta meta que indexa la pagina

--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="z_Vxz3wBwb0aUMMyQrA6Ag2gkYl5d5LvcqNjpwJMWWs" />
   <meta name="author" content="Miguel Angel Amaya Rodriguez" />
   <meta name="author" content="Christian Javier Ayala Guerra" />
   <meta name="author" content="Diego José Ayala Guerra" />
