--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,7 +73,7 @@ a{
 .nav-toggler{
     height: 34px;
     width: 44px;
-    background-color: #ffffff;
+    background-color: #ffffff !important;
     border-radius: 4px;
     cursor: pointer;
     border: none;
