--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -1,25 +1,29 @@
 <%- include("templates/head") %>
 
     <div class="top-bar">
-        <h1>Foro</h1>            
+        <h1>Capturar el titulo del foro</h1>            
     </div>
 
-    <div class="main">
-        <form method="post">
-           Autor: <input type="text" placeholder="Autor" id="author" name="author">        
-           Comentario: <input type="text" placeholder="Comentario" id="comment" name="comment">
-            
-        <div>
-            <input type="submit" value="Comentar"></input>
+    <div class="maincomment">
+        <div class="comments">
+            <form method="post" class="formcomment">
+               <label>Autor:</label><input type="text" placeholder="Autor" id="author" name="author" class="formatinput">        
+               <label>Comentario:</label><input type="text" placeholder="Comentario" id="comment" name="comment" class="formatinput">
+                <button type="submit" class="btnComment">Comentar</button>
+             </form>
         </div>
-        </form>
-
-        <% for(let i=0; i<data.length;i++){ %>
-            <p><%= data[i].usuario_res%></p>
-            <p><%= data[i].descripcion_res%></p>
-            <p><%= data[i].ayuda%></p>
-            <p><%= data[i].noayuda%></p>
-        <% } %>
     </div>
+
+
+    <% for(let i=0; i<data.length;i++){ %>
+        <div class="seccioncomentarios">
+        <div class="mensajes">
+            <div class="contentmessage">Autor: <%= data[i].usuario_res%> <br></div> 
+            <div class="contentmessage">Respuesta: <%= data[i].descripcion_res%><br></div>
+            <div class="contentmessage">Me gusta: <%= data[i].ayuda%> No me gusta: <%= data[i].noayuda%></div>
+        </div>
+
+    </div>
+    <% } %>
 
 <%- include("templates/footer") %>
