--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -10,7 +10,7 @@
             </li>
 
             <li><a href="../terminosycondiciones">Términos y condiciones</a></li>
-            <li><a href="#">Acerca de nosotros</a></li>
+            <li><a href="../acercaDNosotros">Acerca de nosotros</a></li>
         </ul>
     </div>
 </footer>
