--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -22,6 +22,7 @@
   <link rel="stylesheet" type="text/css" href="/css/contac.css" />
   <link rel="stylesheet" type="text/css" href="/css/foro.css"/>
   <link rel="stylesheet" type="text/css" href="/css/termycond.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/acerNosotros.css"/>
   <title>Home</title>
   <script src="https://kit.fontawesome.com/f9e5d5f13a.js" crossorigin="anonymous"></script>
 </head>
