--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="containers">
         <ul>
-            <li><a href="https://www.facebook.com/PhpforDevs-100302545832385/?ref=pages_you_manage" target="_blank"><i
+            <li><a href="#" target="_blank"><i
                         class="fab fa-facebook-square"></i></a>
                 <a href="https://www.instagram.com/phpfordevs/?hl=es" target="_blank"><i
                         class="fab fa-instagram"></i></a>
