--- a/views/termycondi.ejs
+++ b/views/termycondi.ejs
@@ -15,7 +15,8 @@
         <p class="parrafoTC">El titular se reserva el derecho de realizar cualquier tipo de modificación en el sitio web
             en cualquier momento y sin previo aviso, el usuario acepta dichas modificaciones. El acceso al sitio web por
             parte del usuario es libre y gratuito, la utilización del
-            contenido, productos y/o servicios no implica un costo de suscripción para el usuario. El sitio web solo admite
+            contenido, productos y/o servicios no implica un costo de suscripción para el usuario. El sitio web solo
+            admite
             el acceso a personas mayores de edad y no se hace responsable por
             el incumplimiento de esto. Si el usuario reside en otro país y decide acceder al sitio web lo hará bajo su
             responsabilidad.
@@ -43,7 +44,7 @@
             responsabiliza por los daños causados por el acceso y/o utilización del sitio web. </p>
     </div>
 
-    <h2 class="titulo">IV.POLÎTICA DE PRIVACIDAD Y PROTECCIÒN DE DATOS</h2>
+    <h2 class="titulo">IV.POLÍTICA DE PRIVACIDAD Y PROTECCIÓN DE DATOS</h2>
     <div class="contenedorTC">
         <p class="parrafoTC">El titular se compromete a tomar las medidas necesarias que garanticen la seguridad del
             usuario, evitando que se haga uso indebido de los datos personales que el usuario proporcione en el sitio
@@ -55,13 +56,14 @@
             cookies que son pequeñas cantidades de información
             que se almacenan en el navegador utilizado por el usuario como datos de ingreso, preferencias del usuario,
             fecha y hora en que se accede al sitio web, sitios visitados y dirección IP, esta información es anónima y
-            solo se utilizará para mejorar el sitio web. Los cookies facilitan la navegación y la hacen más amigable, sin
+            solo se utilizará para mejorar el sitio web. Los cookies facilitan la navegación y la hacen más amigable,
+            sin
             embargo, el usuario puede
             desactivarlos en cualquier momento desde su navegador en el entendido de que esto puede afectar algunas
             funciones del sitio web. </p>
     </div>
 
-    <h2 class="titulo">V.POLÌTICA DE ENLACES</h2>
+    <h2 class="titulo">V.POLÍTICA DE ENLACES</h2>
     <div class="contenedorTC">
         <p class="parrafoTC">En el sitio web puede contener enlaces a otros sitios de internet pertenecientes a terceros
             de los cuales no se hace responsable de los daños que este puee causar. </p>
