ajuste a optimizacion de solicitud de archivos css

--- a/views/acercaDNosotros.ejs
+++ b/views/acercaDNosotros.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head") %>
+<%- include("templates/head",{ruta:'/css/acerNosotros.css',title:'Acerca de Nosotros'}) %>
 
 <!--Contenido-->
 <title>Acerca de Nosotros</title>
