--- a/views/contactanos.ejs
+++ b/views/contactanos.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head") %>
+<%- include("templates/head",{ruta:'/css/contac.css',title:'Contactanos'}) %>
 <div class="formulario">
     <div class="contacto">
         <h3>Escribenos tus sugerencias!</h3><br/>
