--- a/views/cuestionarioAvanzado.ejs
+++ b/views/cuestionarioAvanzado.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head") %>
+<%- include("templates/head",{ruta:'/css/cuestionario.css',title:'Cuestionario Avanzado de PHP'}) %>
 <%- include("templates/cuestionario") %>
 <script src="js/preguntasAvanzado.js"></script>
 <script src="js/cuestionarioAvanzado.js"></script>
