--- a/views/cuestionarios.ejs
+++ b/views/cuestionarios.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head") %>
+<%- include("templates/head",{ruta:'/css/cuestionarios.css',title:'Cuestionarios de PHP'}) %>
 <script type="text/javascript" src="js/preguntasBasico.js"></script>
 <script type="text/javascript" src="js/preguntasIntermedio.js"></script>
 <script type="text/javascript" src="js/preguntasAvanzado.js"></script>
