--- a/views/cursos.ejs
+++ b/views/cursos.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head") %>
+<%- include("templates/head",{ruta:"/css/cursos.css",title:'Cursos de php'}) %>
 <div class="contenedor">
     <a href="#">
         <section class="cSection">
