--- a/views/foro.ejs
+++ b/views/foro.ejs
@@ -1,5 +1,5 @@
 <!--Formulario de llenado-->
-<%- include("templates/head") %>
+<%- include("templates/head",{ruta:'/css/foro.css',title:'Foro phpfordevs'}) %>
 
 <!--Captura los valores por medio de una lista ordenada-->
 <div class="mainforum">
