--- a/views/termycondi.ejs
+++ b/views/termycondi.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head") %>
+<%- include("templates/head",{ruta:'/css/termycond.css',title:'Terminos y Condiciones phpfordevs'}) %>
 
     <!--Contenido-->
     <h1 class="titulo2">Terminos y condiciones</h1>
