--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/head") %>
+<%- include("templates/head",{ruta:'/css/foro.css',title:'Titulo Foro'}) %>
 
     <div class="top-bar">
         <h1>Capturar el titulo del foro</h1>            
