--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -11,12 +11,12 @@
 
             <nav class="nav">
                 <ul>
-                    <li><a href="../" class="activado"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="../cursos">Cursos</a></li>
+                    <li><a href="/" class="activado"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="/cursos">Cursos</a></li>
                     <li><a href="#">Editor y compilador</a></li>
-                    <li><a href="../cuestionarios">Cuestionarios</a></li>
-                    <li><a href="../foro">Foro</a></li>
-                    <li><a href="../contactanos">Contactanos</a></li>
+                    <li><a href="/cuestionarios">Cuestionarios</a></li>
+                    <li><a href="/foro">Foro</a></li>
+                    <li><a href="/contactanos">Contactanos</a></li>
                 </ul>
             </nav>
         </div>
