--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,39 +1,40 @@
 <%- include("templates/head",{ruta:'',title:'phpfordevs'}) %>
-    <div class="cuerpo">
-        <div class="general">
-            <div class="general-linea">
-                <div class="cuadrados">
-                    <a href="#" class="Cuadrados">
-                        <p>Cursos</p>
-                        <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
-                    </a>
-                </div>
-                <div class="cuadrados">
-                    <p>Bienvenidos</p>
-                </div>
-                <div class="cuadrados">
-                    <a href="#">
-                        <p>Cuestionarios</p>
-                        <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
-                    </a>
-                </div>
+<div class="cuerpo">
+    <div class="general">
+        <div class="general-linea">
+            <div class="cuadrados">
+                <a href="#" class="Cuadrados">
+                    <p class="textoimagen">Cursos</p>
+                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato" >
+                </a>
             </div>
-            <div class="general-linea">
-                <div class="cuadrados">
-                    <a href="#">
-                        <p>Editor y compilador</p>
-                        <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
-                    </a>
-                </div>
-                <div class="cuadrados">
-                    <p>"Inserte su eslogan aqui"</p>
-                </div>
-                <div class="cuadrados">
-                    <a href="#">
-                        <p>Foro</p>
-                        <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
-                    </a>
-                </div>
+            <div class="cuadradosT">
+                <p>Bienvenidos</p>
             </div>
+            <div class="cuadrados">
+                <a href="#">
+                    <p class="textoimagen">Cuestionarios</p>
+                    <img src="/img/gat.png" width="80%" height="80%" alt="Gato">
+                </a>
+            </div>
+        </div>
+        <div class="general-linea">
+            <div class="cuadrados">
+                <a href="#">
+                    <p class="textoimagen">Editor y compilador</p>
+                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato" >
+                </a>
+            </div>
+            <div class="cuadradosT" >
+                <p">"Inserte su eslogan aqui"</p>
+            </div>
+            <div class="cuadrados">
+                <a href="#">
+                    <p class="textoimagen">Foro</p>
+                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
+                </a>
+            </div>
+        </div>
+
 
             <%- include("templates/footer") %>
