--- a/views/cuestionarios.ejs
+++ b/views/cuestionarios.ejs
@@ -1,8 +1,8 @@
 <%- include("templates/head") %>
-<script type="text/javascript" src="js/preguntasBasico.js"></script>
-<script type="text/javascript" src="js/preguntasIntermedio.js"></script>
-<script type="text/javascript" src="js/preguntasAvanzado.js"></script>
-<script src="js/cuestionarios.js"></script>
+<script type="text/javascript" src="/js/preguntasBasico.js"></script>
+<script type="text/javascript" src="/js/preguntasIntermedio.js"></script>
+<script type="text/javascript" src="/js/preguntasAvanzado.js"></script>
+<script src="/js/cuestionarios.js"></script>
 <div class="contenedorG">
     <a href="cuestionarioBasico">
         <section class="cSectionC">
