--- a/views/cursos.ejs
+++ b/views/cursos.ejs
@@ -6,16 +6,26 @@
                 <tbody>
                     <tr>
                         <td rowspan="3" class="icono"><i class="fas fa-play-circle"></i></td>
-                        <td colspan="2" class="titulo">Vídeo Introductorio</td>
+                        <td colspan="3" class="titulo">Vídeo Introductorio</td>
                     </tr>
                     <tr>
-                        <td colspan="2">
+                        <td colspan="3">
                             <div class="contenido">Contenido:</div>
                             <div class="pContenido"><p class="iconoDiv">·</p>Introducción del curso</div>
                         </td>
                     </tr>
                     <tr>
-                        <td class="cantTiempo"><label id="cant">2:05</label></td>
+                        <td class="estrellas">
+                            <% for(let i=0; i<data[1].estrellas;i++){ %>
+                                <p class="iconoEstre"><i class="fas fa-star"></i></p>
+                            <%}%>
+                            <% for(let i=0; i<5-data[1].estrellas;i++){ %>
+                                <p class="iconoEstre"><i class="far fa-star"></i></p>
+                            <%}%>
+                        </td>
+                        <td class="cantTiempo">
+                                <label id="cantP1"><%=data[1].tiempo;%></label>
+                        </td>
                         <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
                     </tr>
                 </tbody>
@@ -40,7 +50,19 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="cantTiempo"><label id="cant">2:05</label></td>
+                        <td class="estrellas">
+                            <% for(let i=0; i<5;i++){ %>
+                                <%if(i<parseInt(data[2].estrellas)){%>
+                                    <p class="iconoEstre"><i class="fas fa-star"></i></p>
+                                <%}%>
+                            <%}%>
+                            <%for(let i=0; i<5-data[2].estrellas;i++){ %>
+                                <p class="iconoEstre"><i class="far fa-star"></i></p>
+                            <%}%>
+                        </td>
+                        <td class="cantTiempo">
+                                <label id="cantP1"><%=data[2].tiempo;%></label>
+                        </td>
                         <td><img class="iconoReloj" src="img/calendar-clock.svg" alt="Imagen de reloj"></i></td>
                     </tr>
                 </tbody>
