--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,16 +5,17 @@
             <div class="cuadrados">
                 <a href="#" class="Cuadrados">
                     <p class="textoimagen">Cursos</p>
-                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato" >
+                    <img src="/img/cursos.jpg" width="70%" height="70%" alt="Gato" >
                 </a>
             </div>
-            <div class="cuadradosT">
-                <p>Bienvenidos</p>
+            <div class="cuadrados">
+                <p class="textoimagen">Bienvenidos</p>
+                <img src="/img/bienvenidos.png" width="60%" height="80%">
             </div>
             <div class="cuadrados">
                 <a href="#">
                     <p class="textoimagen">Cuestionarios</p>
-                    <img src="/img/gat.png" width="80%" height="80%" alt="Gato">
+                    <img src="/img/cuestionario2.png" width="50%" height="90%" alt="Gato">
                 </a>
             </div>
         </div>
@@ -22,7 +23,7 @@
             <div class="cuadrados">
                 <a href="#">
                     <p class="textoimagen">Editor y compilador</p>
-                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato" >
+                    <img src="/img/php-logo.jpg" width="70%" height="70%" alt="Gato" >
                 </a>
             </div>
             <div class="cuadradosT" >
@@ -31,7 +32,7 @@
             <div class="cuadrados">
                 <a href="#">
                     <p class="textoimagen">Foro</p>
-                    <img src="/img/gat.png" width="100%" height="15%" alt="Gato">
+                    <img src="/img/foro.jpg" width="70%" height="70%" alt="Gato">
                 </a>
             </div>
         </div>
