--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <div class="general">
         <div class="general-linea">
             <div class="cuadrados">
-                <a href="#" class="Cuadrados">
+                <a href="/cursos" class="Cuadrados">
                     <p class="textoimagen">Cursos</p>
                     <img src="/img/cursos.jpg" width="70%" height="70%" alt="Gato" >
                 </a>
@@ -13,7 +13,7 @@
                 <img src="/img/bienvenidos.png" width="60%" height="80%">
             </div>
             <div class="cuadrados">
-                <a href="#">
+                <a href="/cuestionarios">
                     <p class="textoimagen">Cuestionarios</p>
                     <img src="/img/cuestionario2.png" width="50%" height="90%" alt="Gato">
                 </a>
@@ -30,7 +30,7 @@
                 <p">"Inserte su eslogan aqui"</p>
             </div>
             <div class="cuadrados">
-                <a href="#">
+                <a href="/foro">
                     <p class="textoimagen">Foro</p>
                     <img src="/img/foro.jpg" width="70%" height="70%" alt="Gato">
                 </a>
