--- a/views/cuestionarios.ejs
+++ b/views/cuestionarios.ejs
@@ -3,6 +3,7 @@
 <script type="text/javascript" src="/js/preguntasIntermedio.js"></script>
 <script type="text/javascript" src="/js/preguntasAvanzado.js"></script>
 <script src="/js/cuestionarios.js"></script>
+<link rel="stylesheet" type="text/css" href="/css/cuestionarios.css" />
 <div class="contenedorG">
     <a href="cuestionarioBasico">
         <section class="cSectionC">
