cambios en el home 3.0

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
                 </a>
             </div>
             <div class="cuadrados">
-                <p class="textoimagen">Bienvenidos</p>
+                <p class="textoimagen">Bienvenidos a PhpForDevs</p>
                 <img src="/img/bienvenidos.png" width="60%" height="80%">
             </div>
             <div class="cuadrados">
@@ -23,7 +23,7 @@
             <div class="cuadrados">
                 <a href="#">
                     <p class="textoimagen">Editor y compilador</p>
-                    <img src="/img/php-logo.jpg" width="70%" height="70%" alt="Gato" >
+                    <img src="/img/phplogo.png" width="60%" height="75%" alt="Gato" >
                 </a>
             </div>
             <div class="cuadradosT" >
