--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,9 +179,9 @@ a{
 .cuadrados{
     float: left;
     width: 100%;
-    height: 300px;
+    height: 350px;
+    background-color: lightgrey;
     margin-right: 15px;
-    
     border-radius: 15px;
     margin-bottom: 15px;
 }
@@ -193,9 +193,9 @@ a{
     
     float: left;
     width: 100%;
-    height: 300px;
+    height: 350px;
     margin-right: 15px;
-    
+    background-color:lightgray;
     border-radius: 15px;
     justify-content: center;
     display:flex;
@@ -205,6 +205,8 @@ a{
 }
 
 .textoimagen{
+
+    font-size: 20px;
     padding-top: 10px;
     padding-bottom: 15px;
 }
