imagen de foro arreglada

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
             <div class="cuadrados">
                 <a href="/foro">
                     <p class="textoimagen">Foro</p>
-                    <img src="/img/foro.jpg" width="70%" height="70%" alt="Gato">
+                    <img src="/img/foro.png" width="60%" height="80%" alt="Gato">
                 </a>
             </div>
         </div>
