--- a/views/acercaDNosotros.ejs
+++ b/views/acercaDNosotros.ejs
@@ -6,7 +6,7 @@
 <div class="nosotros">
     <div class="mvi">
         <div class="quienesSomos">
-            <h3>¿Quiénes somos?</h3>
+            <h3>Historia</h3>
             <p>
                 <strong>PhpForDevs</strong>, es una página creada por estudiantes de la Facultad de <strong>Ingeniería de Sistemas Informáticos</strong> de la <strong>Universidad de El Salvador</strong>, con la intención principal de brindar conocimiento y ayuda a usuarios en la web interesados en el lenguaje de programación PHP.
             </p>
